# vortex-hip

./: .gitignore  .gitmodules  CONTRIBUTING.md  INDEX.md  README.md
Transforms/: CMakeLists.txt  Passes.cpp  RaiseLLVMToArith.cpp  RaiseLLVMToCF.cpp  RaiseLLVMToMath.cpp  UnrollParallelLoops.cpp
Transforms/NormalizeSCFLoops/: DetectParallelForPattern.cpp  DetectParallelForPattern.h  ForallToForPattern.cpp  ForallToForPattern.h  IVPatternHelpers.cpp  IVPatternHelpers.h  IndexSwitchToIfPattern.cpp  IndexSwitchToIfPattern.h  LoopTraits.h  NormalizeSCFLoopsPass.cpp  RemoveZeroTripCheckPattern.h  WhileToForPattern.cpp  WhileToForPattern.h
Transforms/RaiseLLVMToMemRef/: AllocaConversion.cpp  Common.h  GEPAnalysis.cpp  GlobalOps.cpp  IntrinsicOps.cpp  MemoryOperations.cpp  RaiseLLVMToMemRefPass.cpp  TypeInference.cpp
Transforms/SCFToHandshakeDSA/: AllocDeallocAnalysis.cpp  AllocDeallocAnalysis.h  Common.h  ConversionRegistry.cpp  ConversionRegistry.h  DeallocProcessing.cpp  DeallocProcessing.h  FuncConversion.cpp  HandshakeOptimizations.cpp  MemoryConnection.cpp  MemoryOpsHelpers.cpp  MemoryOpsHelpers.h  ParallelLoops.cpp  ParallelismAnalysis.cpp  ParallelismAnalysis.h  PassHelpers.cpp  SCFBlockAbstraction.h  SCFControlFlowConversion.cpp  SCFConversionHelpers.cpp  SCFConversionHelpers.h  SCFConversionPatterns.h  SCFLoopConversion.cpp  SCFNestedConversion.cpp  SCFPreprocessing.cpp  SCFPreprocessing.h  SCFToHandshakeDSAPass.cpp  (+2 more)
docs/: PHASE1_COMPLETE.md  PHASES_OVERVIEW.md  SUMMARY.md  WORK_DISTRIBUTION.md
examples/: README.md  warp_reduction.hip  warp_voting.hip
hip_runtime_vortex/: README.md  hip_runtime.h
hip_tests/: README.md  basic.hip  diverge.hip  dotproduct.hip  fence.hip  relu.hip  sgemm.hip  simple_kernel.hip  simple_malloc_test.hip  simple_with_launch.cu  vecadd.hip
include/: README.md
phase1-metadata/: README.md
phase1-runtime-tests/: README.md
phase2-compiler/: README.md
phase3-runtime/: PHASE3A_COMPLETE.md  README.md  TEST_PLAN.md
runtime/: ARGUMENT_MARSHALING.md  CMakeLists.txt  HARDWARE_TESTING.md  QUICK_START.md  README.md  build.sh  test.sh
runtime/cmake/: vortex_hip-config.cmake.in
runtime/examples/: CMakeLists.txt  test_marshaling.cpp  vector_add.cpp
runtime/include/: vortex_hip_device.h  vortex_hip_runtime.h
runtime/include/hip/: hip_runtime.h  hip_runtime_polygeist.h
runtime/src/: vortex_hip_runtime.cpp
scripts/: validate_docs.sh
tests/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  TEST_CONVERSION_SUMMARY.md  basic.cpp  conv3.cpp  cta.cpp  demo.cpp  diverge.cpp  dogfood.cpp  dotproduct.cpp  dropout.cpp  fence.cpp  io_addr.cpp  madmax.cpp  mstress.cpp  printf.cpp  relu.cpp  sgemm.cpp  sgemm2.cpp  sgemm_tcu.cpp  sgemv.cpp  sort.cpp  stencil3d.cpp  vecadd.cpp
tests/basic_test/: EVALUATION_SUMMARY.md  Makefile  README.md  basic_test  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh  test_suite.sh
tests/conv3_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/cta_test/: Makefile  cta_test  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh
tests/cta_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/demo_test/: Makefile  demo_test  kernel.cpp  kernel.elf  kernel.vxbin  kernel_metadata.cpp  main.cpp  run.sh
tests/demo_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/diverge_test/: Makefile  diverge_test  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh
tests/diverge_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/dogfood_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/dotproduct_test/: Makefile  dotproduct_test  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh
tests/dotproduct_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/dropout_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/fence_test/: Makefile  fence_test  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh
tests/fence_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/io_addr_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/madmax_test/: Makefile  kernel.cpp  kernel.elf  kernel.vxbin  madmax_test  main.cpp  run.sh
tests/madmax_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/metadata_gen/: test_metadata_gen.py
tests/mstress_test/: Makefile  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  mstress_test  run.sh
tests/mstress_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/plugin_test/: README.md  hip_kernel_annotated.cpp  hip_kernel_annotated.ll  run_test.sh  simple_kernel.cu  simple_vortex_style.cpp  simple_vortex_style.ll  test_cuda.cu  test_kernel.hip  test_kernel_annotate.cpp  test_kernel_simple.cpp  verify_metadata.py
tests/printf_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/relu_test/: Makefile  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  relu_test  run.sh
tests/relu_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/sgemm2_test/: Makefile  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh  sgemm2_test
tests/sgemm2_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/sgemm_tcu_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/sgemm_test/: Makefile  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh  sgemm_test
tests/sgemm_test/trace/: ramulator.log.ch0
tests/sgemv_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/sort_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/stencil3d_test/: Makefile  kernel.cpp  main.cpp  run.sh
tests/test_metadata_gen/: README.md  simple_kernel.cpp  test_manual_metadata  test_manual_metadata.cpp  test_script.sh
tests/unit/: CMakeLists.txt  README.md  run.sh  test_argument_layout.cpp  test_metadata_structure.cpp  test_type_sizes.cpp
tests/vecadd_metadata_test/: Makefile  README.md  kernel.cpp  kernel.elf  kernel.vxbin  kernel_metadata_manual.cpp  main.cpp  run.sh  test.sh  test_size  test_size.cpp  vecadd_test
tests/vecadd_metadata_test/trace/: ramulator.log.ch0  ramulator.log.ch1
tests/vecadd_test/: Makefile  README.md  kernel.cpp  kernel.elf  kernel.vxbin  main.cpp  run.sh  vecadd_test
tests/vecadd_test/trace/: ramulator.log.ch0  ramulator.log.ch1
(+68 files in other folders)
